--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,14 @@ project(UnscentedKF)
 
 cmake_minimum_required (VERSION 3.5)
 
-add_definitions(-std=c++11)
+add_definitions(-std=c++1z)
 
 set(CXX_FLAGS "-Wall")
 set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-set(sources src/ukf.cpp src/main.cpp src/tools.cpp)
+file(GLOB_RECURSE sources src/ukf/*.cpp src/*.h)
 
+include_directories("${CMAKE_SOURCE_DIR}/src")
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") 
 
